test/syc/good/arrayunbnd.c
/*
 * Argument to function is an array with unspecitied bounds.
 */

int d;

void foo(int a[])
{
	d = a[1];
}
