test/syc/bad/initidxexc.c
/*
 * Array index in initializer exceeds array bounds.
 */

int a[2] = {
	[2] = 1
};
